--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for App::Burp
 
+          - Functional
+
 0.1.1     2016-12-04 18:33:38
           - Added project files to master branch
 
