--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for App::Burp
 
+          - Restarts when config file changes
           - Functional
 
 0.1.1     2016-12-04 18:33:38
